chore: Update autocomplete script